# java2rust

./: .gitignore  Cargo.toml  README.md  SEMANTICS.md  TODO.md
docs/: in-place-io-prototype.md  r4-argwrap-current.diff  stdlib-checklist.md  structural-engines-plan.md  subtype-research-plan.md  tech-debt.md  tier2-phase1-current.diff  tier2-substrate-reference.diff  tier2-unification-plan.md  use-site-borrow-plan.md
docs/parked/: README.md  collections-pq-enumset-weakref.patch  regex-pattern-matcher.patch
examples/: dump.rs
java2rust-rs/: README.md
java2rust-rs/examples/: batch.rs  check.rs
java2rust-rs/src/: adapter.rs  ast.rs  dump.rs  id_tracker.rs  lib.rs  main.rs  naming.rs  nullability.rs  parse.rs  type_tracker.rs
java2rust-rs/tests/: golden.rs
java2rust-rs/tools/: BatchConvert.java  GenGolden.java  compilecheck.sh  gen_golden.sh  parity.sh
src/: adapter.rs  ast.rs  borrow.rs  crate_layout.rs  dump.rs  id_tracker.rs  lib.rs  main.rs  modifiers.rs  naming.rs  nullability.rs  parse.rs  stdlib.rs  stubs.rs  symbol_map.rs  types.rs
src/runtime/: atomic.rs  bitset.rs  decimal_format.rs  header.rs  io_file.rs  io_read.rs  io_write.rs  iter.rs  macros.rs  random.rs  regex.rs  string_tokenizer.rs  util.rs  zip.rs
tests/: codegen_fixes.rs  crate_wiring.rs  jar_to_symbols.rs  linking.rs  stdlib_table.rs  stubs.rs  type_resolver.rs
tests/corpus/: comment_interface.rs.expected  comment_package.rs.expected  decl_enum_blocks.rs.expected  decl_field.java  decl_field.rs.expected  decl_field_init.rs.expected  decl_local.java  decl_local.rs.expected  decl_local_init.rs.expected  decl_method_param.rs.expected  decl_self_param.java  decl_self_param.rs.expected  decl_static_method.rs.expected  for_complete.java  (+39 more)
tools/: bioformats_check.sh  bjaaprop_check.sh  bjalign_check.sh  compilecheck.sh  fastq_check.sh  jahmm_check.sh  jaligner_check.sh  jhlabs_check.sh  jsoup_check.sh  jts_check.sh  trim_check.sh  varscan_check.sh  vcf_check.sh
(+76 files in other folders)
