[package]
name = "java2rust-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.26.9"
tree-sitter-java = "0.23.5"

# The symbol-map schema (src/symbol_map.rs) is shared between the `gen-symbols`
# producer and the translator's consumer (`--link`), serialized with serde.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Used only by the `gen-symbols` binary, which introspects a translated Rust
# crate to extract the Java->Rust symbol map.
syn = { version = "2", features = ["full"] }
quote = "1"
# Used only by the `jar-to-symbols` binary, which reads a dependency JAR and
# emits the Java->Rust symbol map. JARs are zips of deflate/stored entries.
cafebabe = "0.9.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

# Used only by the `java_runtime_compiles` test module (crate_layout.rs), which
# `include!`s `src/runtime/zip.rs` (the java.util.zip runtime fragment backed by
# flate2) and must type-check.
[dev-dependencies]
flate2 = "1"

[[bin]]
name = "java2rust-rs"
path = "src/main.rs"

[[bin]]
name = "gen-symbols"
path = "src/bin/gen_symbols.rs"

[[bin]]
name = "jar-to-symbols"
path = "src/bin/jar_to_symbols.rs"
